# recallrag

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  RUN_EXPERIMENTS.md  pyproject.toml
case/docs/: dqn_target_network.md  hybrid_search.md  rag_chunking.md  reranker.md  vector_database_patch_index.md
case/eval/: questions.jsonl
case/scripts/: extract_text.py
case/sources/: sources.json
case_beir/nfcorpus/: README.md
case_beir/scifact/: README.md
case_zh_dureader/: README.md  source_metadata.json
case_zh_dureader/docs/: zh_doc_003.md  zh_doc_004.md  zh_doc_005.md  zh_doc_008.md  zh_doc_015.md  zh_doc_016.md  zh_doc_017.md
case_zh_dureader/eval/: questions.jsonl  questions_heldout.jsonl  questions_heldout.rewrite_audit.json
case_zh_dureader_120/: README.md  source_metadata.json
recallrag/: api.py  bm25.py  chunkers.py  cli.py  demo.py  diagnose.py  embeddings.py  eval.py  ingest.py  patch_index.py  qdrant_backend.py  reranker.py  schemas.py  strong_baselines.py  text_utils.py  triage.py
report/: report_20260720_153543_n10_c600_o0.md
runs/zh120_base/: eval_report.md  (+4 more)
scripts/: build_query_heldout.py  build_zh_dureader_case.py  eval_fixed_patch_generalization.py  eval_fixed_patch_rerank.py  eval_neighbor_expansion.py  import_beir_dataset.py  import_beir_scifact.py  make_diagnostic_stress_report.py  make_generalization_report.py  paired_significance.py  run_beir_eval.sh  run_local_engineering_eval.py  run_local_engineering_eval.sh  run_mvp.sh  run_qdrant_mvp.sh  start_qdrant.sh  validate_patch_effect.py
tests/: test_core_logic.py
(+1754 files in other folders)
